--- a/challenges/index.html
+++ b/challenges/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-    <!--  QHACKS Travel -->
+    <!--  Rava Hacks Travel -->
     <!--  Author: enoch <et.enoch@gmail.com> -->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>QHacks Challenges</title>
+        <title>Rava Hacks Challenges</title>
         <meta name="description" content="Challenges">
-        <meta name="keywords" content="Hackathon, Queen's University, Kingston, QHacks, Queensu">
+        <meta name="keywords" content="Hackathon, Ryerson University, Toronto, Rava Hacks, Ryersonu">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="../apple-touch-icon.png">
