--- a/hardware/index.html
+++ b/hardware/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-    <!--  QHACKS Travel -->
+    <!--  Rava Hacks Travel -->
     <!--  Author: enoch <et.enoch@gmail.com> -->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>QHacks Hardware List</title>
+        <title>Rava Hacks Hardware List</title>
         <meta name="description" content="Hardware List">
-        <meta name="keywords" content="Hackathon, Queen's University, Kingston, QHacks, Queensu, Hardware">
+        <meta name="keywords" content="Hackathon, Ryerson University, Toronto, Rava Hacks, Ryersonu, Hardware">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="../apple-touch-icon.png">
@@ -24,14 +24,14 @@
         <div class="container">
             <div class="text_align_center">
                 <img src="../img/logo.png" style="margin-top:10px;width:200px;">
-                <h2>QHacks Hardware List</h2>
+                <h2>Rava Hacks Hardware List</h2>
                 <br/>
             </div>
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8" style="font-size:120%;">
 
-                    <h3>The following items will be available for borrowing at QHacks:</h3>
+                    <h3>The following items will be available for borrowing at Rava Hacks:</h3>
                     <br/>
                     <ul>
                         <li>10x Intel Edisons</li>
