--- a/travel/index.html
+++ b/travel/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>QHacks Travel Details</title>
         <meta name="description" content="QHacks Travel Details">
-        <meta name="keywords" content="Hackathon, Queen's University, Kingston, QHacks, Queensu, Travel">
+        <meta name="keywords" content="Hackathon, Ryerson University, Toronto, QHacks, Ryersonu, Travel">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="../apple-touch-icon.png">
@@ -39,7 +39,6 @@
                     We will be providing the following bussing routes:<br/>
                     <br/>
                     <strong>Bus #1: Round trip from University of Waterloo campus to Queen’s University</strong><br/>
-                    <strong>Bus #2: Round trip from University of Toronto campus to Queen’s University</strong><br/>
                     <br/>
                     The number of seats available for reservation on the buses assumes that: 
                     Students from University of Western, Wilfrid Laurier University and University of Waterloo will travel to QHacks on Bus #1. 
@@ -49,8 +48,7 @@
                     Bus registration is now closed. The first 48 students to register for their respective bus are guaranteed a spot. There will be a wait list for any registrants beyond that cap.
                     <br/><br/>
                     <h4>Bus Coordinators</h4>
-                    Waterloo: Michael Song [<a href="mailto:msong63@uwo.ca">msong63@uwo.ca</a>]<br/>
-                    Toronto: Pei Li [<a href="peihongli94@gmail.com">peihongli94@gmail.com</a>]
+                    Waterloo: Matheesan Manokaran [<a href="mailto:rava@ryerson.ca">msong63@uwo.ca</a>]<br/>
                     <br/>
                     <br/>
                     <h2>Travel Reimbursement</h2>
@@ -61,7 +59,7 @@
                     <br/><br/>
                     If you have received an acceptance, you will then have <strong>4 days</strong> to send the receipts of your purchased trip to <a href="mailto:jennifer@qhacks.io">jennifer@qhacks.io</a>. After this deadline, your reimbursement acceptance will have expired. 
                     <br/><br/>
-                    When planning your trip, please arrange to arrive at Queen's University no later than 6:00PM on Friday, March 4th and leave no earlier than 5:00PM on Sunday, March 6th.
+                    When planning your trip, please arrange to arrive at Ryerson University no later than 11:00PM on Saturday, February 3rd and leave no earlier than 12:00PM on Sunday, February 4th.
                     <br/>
 <br/>
 
