--- a/apply/index.html
+++ b/apply/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>QHacks 2017</title>
     <meta name="description" content="QHacks is back for round two! We're pulling students from all over North America to come together for a wild 36 hours - designing, developing, demoing, cup-stacking, foosball-playing, and Soylent-drinking at our home base at Queen's University. Whether you're a first timer or a seasoned veteran, QHacks definitely has something to satisfy your interests. This weekend is about inclusiveness for all disciplines - students from any level of skill, from any field of study are encouraged to bring their innovative ideas for a weekend of creative problem solving! The only prerequisites for this weekend are a love for tech and drive to learn. Apply now at qhacks.io/apply!">
-    <meta name="keywords" content="Hackathon, Queen's University, Kingston, QHacks, Queensu, Hiring">
+    <meta name="keywords" content="Hackathon, Queen's University, Toronto, QHacks, Queensu, Hiring">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <link rel="shortcut icon" href="../favicon.ico" />
     <meta property="og:image" content="og_image_promo.png" />
