--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
-    <!--  QHACKS Travel -->
-    <!--  Author: enoch <et.enoch@gmail.com> -->
+    <!--  Rava Hacks Travel -->
+    <!--  Author: enoch <erava.ryerson@gmail.com> -->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>QHacks Schedule</title>
-        <meta name="description" content="QHacks Schedule">
-        <meta name="keywords" content="Hackathon, Queen's University, Kingston, QHacks, Queensu, Schedule">
+        <title>Rava Hacks Schedule</title>
+        <meta name="description" content="Rava Hacks Schedule">
+        <meta name="keywords" content="Hackathon, Ryerson University, Toronto, Rava Hacks, Ryersonu, Schedule">
         <meta http-equiv="refresh" content="0; url=http://qhacks.io/schedule.pdf">
     </head>
     <body>
