--- a/home.html
+++ b/home.html
@@ -42,8 +42,8 @@
             <h1 class="main_title">Rava Hacks</h1>
             <!-- <h2 class="sub_title">Ryerson University | Winter 2017</h2> -->
             <!-- <h2 class="alt_sub_title">Ryerson University<br/>Winter 2017</h2> -->
-            <h2 class="sub_title">Ryerson University | February 3<sup>rd</sup> - 4<sup>th</sup>, 2019</h2>
-            <h2 class="alt_sub_title">Ryerson University<br/> February 4<sup>rd</sup> - 5<sup>th</sup></h2>
+            <h2 class="sub_title">Ryerson University | February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019</h2>
+            <h2 class="alt_sub_title">Ryerson University<br/> February 2<sup>nd</sup> - 3<sup>rd</sup></h2>
             <div class="btn_row">
                 <!--<h3 class="sub_title" style="margin-bottom:20px;">Registration will open soon</h3>-->
                <!--  <a class="btn btn_main orange_btn main_btn" id="signup_to_be_emailed" href="apply">Apply Now!</a> -->
@@ -244,7 +244,7 @@
                             <div class="panel">
                                 <a class="panel-heading text-center" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                                     <h4 class="panel-title">
-                                        Sunday, February 4th, 2019
+                                        Sunday, February 3rd, 2019
                                     </h4>
                                 </a>
                                 <div id="collapseThree" class="panel-collapse collapse in">
