--- a/home.html
+++ b/home.html
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-md-6">
                 <h4 class="sub-title">How much does this cost?</h4>
-                <p>Absolutely nothing! Not a dime!</p>
+                <p>Absolutely nothing! It's free!</p>
             </div>
             <div class="col-md-6">
                 <h4 class="sub-title">What if I don't have a team?</h4>
