--- a/home.html
+++ b/home.html
@@ -85,7 +85,7 @@
                 <div class="text_align_center">
                     <h3 class="sub-title">Rava Hacks Hackathon</h3>
                 </div>
-                <p>Rava Hacks is Ryerson University's Augmented Reality and Virtual Reality hackathon! Ryerson will be hosting a 24 hour hackathon where students from all over teh GTA will be able to turn their ideas into real, tangible projects. Whether you're a first timer or a seasoned veteran, Rava Hacks definitely has something to satisfy your interests. Rava Hacks also wants to start off their annual hackathons with an inclusiveness for all disciplines. Students from any level of skill, from any field of study are encouraged to bring their innovative ideas for a weekend of creative problem solving!</p>
+                <p>Rava Hacks is Ryerson University's Augmented Reality and Virtual Reality hackathon! Ryerson will be hosting a 24 hour hackathon where students from all over the GTA will be able to turn their ideas into real, tangible projects. Whether you're a first timer or a seasoned veteran, Rava Hacks definitely has something to satisfy your interests. Rava Hacks also wants to start off their annual hackathons with an inclusiveness for all disciplines. Students from any level of skill, from any field of study are encouraged to bring their innovative ideas for a weekend of creative problem solving!</p>
                 <!--            </div>
           <div class="col-md-6">
 
