added sponsorship package1

--- a/home.html
+++ b/home.html
@@ -47,8 +47,8 @@
             <div class="btn_row">
                 <!--<h3 class="sub_title" style="margin-bottom:20px;">Registration will open soon</h3>-->
                <!--  <a class="btn btn_main orange_btn main_btn" id="signup_to_be_emailed" href="apply">Apply Now!</a> -->
-                <a href="http://hack.ryersonarvr.com" class="btn btn_main yellow_btn main_btn" id="btn_sponsorship">Apply</a>
-               <a target="_blank" href="sponsorship.pdf" class="btn btn_main yellow_btn main_btn" id="btn_sponsorship">Sponsor</a>
+                <a href="http://hack.ryersonarvr.com" class="btn btn_main orange_btn main_btn" id="btn_sponsorship">Apply</a>
+               <a target="_blank" href="sponsorship.pdf" class="btn btn_main orange_btn main_btn" id="btn_sponsorship">Sponsor</a>
             </div>
             <div class="talk_to_us">Talk to us at <a class="front_contact_link" href="mailto:rava@ryerson.ca">rava@ryerson.ca</a></div>
             <!--<div class="talk_to_us">Thank you for a great event, see you next year!</div>-->
