--- a/home.html
+++ b/home.html
@@ -37,20 +37,21 @@
         <img src="img/hill_left.png" class="hill_left">
         <img src="img/hill_right.png" class="hill_right">
         <div id="header-title">
-            <img class="logo" src="img/logo.png">
-            <div class="sm-margin"></div>
-            <h1 class="main_title">Rava Hacks</h1>
+            <img class="logo" height=100px width=100px src="img/logo.png">
+            <div><b>Presents</b></div>
+            <img class="logo" height=200px width=160px src="RavahacksCAPSPNG.png">
+            <!--<h1 class="main_title">Rava Hacks</h1>-->
             <!-- <h2 class="sub_title">Ryerson University | Winter 2017</h2> -->
             <!-- <h2 class="alt_sub_title">Ryerson University<br/>Winter 2017</h2> -->
-            <h2 class="sub_title">Ryerson University | February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019</h2>
-            <h2 class="alt_sub_title">Ryerson University<br/> February 2<sup>nd</sup> - 3<sup>rd</sup></h2>
-            <div class="btn_row">
+            <h3 style="margin-top: 0px;margin-botto: 0px">Ryerson University | February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019</h3>
+            <h3 class="alt_sub_title" style="margin-top: 0px;margin-botto: 0px">Ryerson University<br/> February 2<sup>nd</sup> - 3<sup>rd</sup></h3>
+            <div class="btn_row" style="margin-top: 0px">
                 <!--<h3 class="sub_title" style="margin-bottom:20px;">Registration will open soon</h3>-->
                <!--  <a class="btn btn_main orange_btn main_btn" id="signup_to_be_emailed" href="apply">Apply Now!</a> -->
                 <a href="http://hack.ryersonarvr.com" class="btn btn_main orange_btn main_btn" id="btn_sponsorship">Apply</a>
                <a target="_blank" href="sponsorship.pdf" class="btn btn_main orange_btn main_btn" id="btn_sponsorship">Sponsor</a>
             </div>
-            <div class="talk_to_us">Talk to us at <a class="front_contact_link" href="mailto:rava@ryerson.ca">rava@ryerson.ca</a></div>
+            <div>Talk to us at <a class="front_contact_link" href="mailto:rava@ryerson.ca">rava@ryerson.ca</a></div>
             <!--<div class="talk_to_us">Thank you for a great event, see you next year!</div>-->
         </div>
     </div>
@@ -447,7 +448,7 @@
             <div class="md-margin2x"></div>
 
             <div class="header_wrapper">
-                <h2 class="header_title">Partners</h2>
+                <!--<h2 class="header_title">Partners</h2>-->
             </div>
             <!-- <div class="md-margin"></div> -->
             
@@ -456,18 +457,16 @@
                     <a target="_blank" href="https://www.ee.ryerson.ca/"><img src="img/sponsors/RyersonECE.png" style="width:375px;margin-top:25px;"></a>
                 </div>
             </div>
-            <!--<div class="row logos_row">
-                <div class="col-md-4 text-center hvr-grow">
-                    <a target="_blank" href="http://ssb.ca/mei"><img src="img/sponsors/mei_logo.png" style="width:340px;margin-top:25px;"></a>
+            <div class="row logos_row">
+                <div class="col-md-4 text-center hvr-grow">            
                 </div>
-                <div class="col-md-4 text-center hvr-grow">
-                    <a target="_blank" href="http://www.cs.queensu.ca/"><img src="img/sponsors/block_queens_computing.png" style="width:290px;"></a>
+               <div class="col-md-4 text-center hvr-grow">
+                    <a target="_blank" href="https://www.ryerson.ca/multimedia-research-laboratory/"><img src="rml.png" style="width:340px;margin-top:25px;"></a>
                 </div>
-                
-                <div class="col-md-4 text-center hvr-grow">
+               <!-- <div class="col-md-4 text-center hvr-grow">
                     <a target="_blank" href="http://my.ece.queensu.ca/index.html"><img src="img/sponsors/ECE.png" style="width:190px;margin-top:22px;"></a>
-                </div>
-            </div>-->
+                </div>-->
+            </div>
             <div class="row logos_row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
