--- a/home.html
+++ b/home.html
@@ -37,14 +37,14 @@
         <img src="img/hill_left.png" class="hill_left">
         <img src="img/hill_right.png" class="hill_right">
         <div id="header-title">
-            <img class="logo" height=100px width=100px src="img/logo.png">
-            <div><b>Presents</b></div>
-            <img class="logo" height=200px width=160px src="RavahacksCAPSPNG.png">
+            <!--<img class="logo" style="width: auto;max-width: 100%;height: auto;max-height: 50px" src="img/logo.png">-->
+            <!--<div><b>Presents</b></div>-->
+            <img class="logo" style="width: auto;max-width: 400px;height: auto;max-height: 450px" src="RAVABCFINALEA.png">
             <!--<h1 class="main_title">Rava Hacks</h1>-->
             <!-- <h2 class="sub_title">Ryerson University | Winter 2017</h2> -->
             <!-- <h2 class="alt_sub_title">Ryerson University<br/>Winter 2017</h2> -->
             <h3 style="margin-top: 0px;margin-botto: 0px">Ryerson University | February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019</h3>
-            <h3 class="alt_sub_title" style="margin-top: 0px;margin-botto: 0px">Ryerson University<br/> February 2<sup>nd</sup> - 3<sup>rd</sup></h3>
+            <!--<h3 class="alt_sub_title" style="margin-top: 0px;margin-botto: 0px">Ryerson University<br/> February 2<sup>nd</sup> - 3<sup>rd</sup></h3>-->
             <div class="btn_row" style="margin-top: 0px">
                 <!--<h3 class="sub_title" style="margin-bottom:20px;">Registration will open soon</h3>-->
                <!--  <a class="btn btn_main orange_btn main_btn" id="signup_to_be_emailed" href="apply">Apply Now!</a> -->
