--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
     <div id="scenery_intro">
         <img src="img/gradient.png" class="circle_gradient">
         <!--<img src="img/tower.png" class="clock_tower">-->
-        <img src="img/moon.png" class="moon">
+        <!--<img src="img/moon.png" class="moon">-->
         <img src="img/buildings.png" class="buildings">
         <img src="img/hill_left.png" class="hill_left">
         <img src="img/hill_right.png" class="hill_right">
@@ -43,7 +43,7 @@
             <!--<h1 class="main_title">Rava Hacks</h1>-->
             <!-- <h2 class="sub_title">Ryerson University | Winter 2017</h2> -->
             <!-- <h2 class="alt_sub_title">Ryerson University<br/>Winter 2017</h2> -->
-            <h3 style="margin-top: 0px;margin-botto: 0px">Ryerson University | February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019</h3>
+            <h4 style="margin-top: 0px;margin-botto: 0px">Ryerson University | February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019</h4>
             <!--<h3 class="alt_sub_title" style="margin-top: 0px;margin-botto: 0px">Ryerson University<br/> February 2<sup>nd</sup> - 3<sup>rd</sup></h3>-->
             <div class="btn_row" style="margin-top: 0px">
                 <!--<h3 class="sub_title" style="margin-bottom:20px;">Registration will open soon</h3>-->
