--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         <div id="header-title">
             <!--<img class="logo" style="width: auto;max-width: 100%;height: auto;max-height: 50px" src="img/logo.png">-->
             <!--<div><b>Presents</b></div>-->
-            <img class="logo" style="width: auto;max-width: 100%;height: auto;max-height: 100%" src="LogoHacksAlt@3x.png">
+            <img class="logo" style="max-width: 100%;max-height: 100%" src="RAVAHACKS_1@3x.png">
             <!--<h1 class="main_title">Rava Hacks</h1>-->
             <!-- <h2 class="sub_title">Ryerson University | Winter 2017</h2> -->
             <!-- <h2 class="alt_sub_title">Ryerson University<br/>Winter 2017</h2> -->
