--- a/home.html
+++ b/home.html
@@ -278,6 +278,12 @@
                                         </tr>
                                         <tr>
                                             <td>12:00pm</td>
+                                            <td>1.5h</td>
+                                            <td>Judging and ShowCase</td>
+                                            <td>Eng Building Lower Floor</td>
+                                        </tr>
+                                         <tr>
+                                            <td>2:00pm</td>
                                             <td>1h</td>
                                             <td>Closing Ceremony</td>
                                             <td>Room: 103 ENG Building</td>
