--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Rava Hacks | Ryerson University | Winter 2019</title>
+    <title>Rava Hacks | Ryerson University | TBA</title>
     <meta name="description" content="Welcome to GTA's first student run VR AR Hackathon! We're pulling students from all over the GTA to come together for a wild 24 hours - designing, developing, demoing, at Ryerson University. Whether you're a first timer or a seasoned veteran, Rava Hacks definitely has something to satisfy your interests. This weekend is about inclusiveness for all disciplines - students from any level of skill, from any field of study are encouraged to bring their innovative ideas for a weekend of creative problem solving! The only prerequisites for this weekend are a love for tech and drive to learn. Apply now at hack.ryersonarvr.com!">
     <meta name="keywords" content="Hackathon, Ryerson University, Toronto, Rava Hacks, RyersonU">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,7 @@
             <!--<h1 class="main_title">Rava Hacks</h1>-->
             <!-- <h2 class="sub_title">Ryerson University | Winter 2017</h2> -->
             <!-- <h2 class="alt_sub_title">Ryerson University<br/>Winter 2017</h2> -->
-            <h4 style="margin-top: 0px;margin-botto: 0px">Ryerson University | February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019</h4>
+            <h4 style="margin-top: 0px;margin-botto: 0px">Ryerson University | TBA <!--February 2<sup>nd</sup> - 3<sup>rd</sup>, 2019--></h4>
             <!--<h3 class="alt_sub_title" style="margin-top: 0px;margin-botto: 0px">Ryerson University<br/> February 2<sup>nd</sup> - 3<sup>rd</sup></h3>-->
             <div class="btn_row" style="margin-top: 0px">
                 <!--<h3 class="sub_title" style="margin-bottom:20px;">Registration will open soon</h3>-->
@@ -86,7 +86,7 @@
                 <div class="text_align_center">
                     <h3 class="sub-title">Rava Hacks Hackathon</h3>
                 </div>
-                <p>Rava Hacks is Ryerson University's Augmented Reality and Virtual Reality hackathon! Ryerson will be hosting a 24 hour hackathon where students from all over the GTA will be able to turn their ideas into real, tangible projects. Whether you're a first timer or a seasoned veteran, Rava Hacks definitely has something to satisfy your interests. Rava Hacks also wants to start off their annual hackathons with an inclusiveness for all disciplines. Students from any level of skill, from any field of study are encouraged to bring their innovative ideas for a weekend of creative problem solving!</p>
+                <p>Rava Hacks is currently on hold in terms of when it will be run as there is a lack of funding. Rava Hacks is Ryerson University's Augmented Reality and Virtual Reality hackathon! Ryerson will be hosting a 24 hour hackathon where students from all over the GTA will be able to turn their ideas into real, tangible projects. Whether you're a first timer or a seasoned veteran, Rava Hacks definitely has something to satisfy your interests. Rava Hacks also wants to start off their annual hackathons with an inclusiveness for all disciplines. Students from any level of skill, from any field of study are encouraged to bring their innovative ideas for a weekend of creative problem solving!</p>
                 <!--            </div>
           <div class="col-md-6">
 
@@ -172,7 +172,7 @@
                             <div class="panel">
                                 <a class="panel-heading text-center" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
                                     <h4 class="panel-title">
-                                        Saturday, February 2nd, 2019
+                                        TBA
                                     </h4>
                                 </a>
                                 <div id="collapseTwo" class="panel-collapse collapse in">
@@ -245,7 +245,7 @@
                             <div class="panel">
                                 <a class="panel-heading text-center" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
                                     <h4 class="panel-title">
-                                        Sunday, February 3rd, 2019
+                                        TBA
                                     </h4>
                                 </a>
                                 <div id="collapseThree" class="panel-collapse collapse in">
